--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <string name="search_wiki">Search Wiki</string>
     <string name="wiki_helper_text">Search in wikipedia</string>
+
+    <string name="favourite">Избранное</string>
+    <string name="settings">Настройки</string>
 </resources>
